--- a/GuessTheWord-Starter/app/src/main/res/layout/game_fragment.xml
+++ b/GuessTheWord-Starter/app/src/main/res/layout/game_fragment.xml
@@ -68,6 +68,19 @@
             tools:text="&quot;Tuna&quot;" />
 
         <TextView
+            android:id="@+id/word_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif"
+            android:text="@{gameViewModel.wordHint}"
+            android:textColor="@color/grey_text_color"
+            app:layout_constraintEnd_toEndOf="@+id/word_text"
+            app:layout_constraintStart_toStartOf="@+id/word_text"
+            app:layout_constraintTop_toBottomOf="@+id/word_text"
+            tools:text="Current word has 6 letters." />
+
+        <TextView
             android:id="@+id/timer_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -75,6 +88,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:fontFamily="sans-serif"
+            android:text="@{gameViewModel.currentTimeString}"
             android:textColor="@color/grey_text_color"
             android:textSize="14sp"
             android:textStyle="normal"
@@ -144,6 +158,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
