--- a/TrackMySleepQuality-Starter/app/src/main/res/layout/fragment_sleep_tracker.xml
+++ b/TrackMySleepQuality-Starter/app/src/main/res/layout/fragment_sleep_tracker.xml
@@ -25,7 +25,7 @@
     <data>
 
         <variable
-            name="sleepTrcakerViewModel"
+            name="sleepTrakerViewModel"
             type="com.example.android.trackmysleepquality.sleeptracker.SleepTrackerViewModel" />
     </data>
 
@@ -59,7 +59,7 @@
                 android:layout_marginStart="@dimen/margin"
                 android:layout_marginTop="@dimen/margin"
                 android:layout_marginEnd="@dimen/margin"
-                android:text="@{sleepTrcakerViewModel.nightsString}" />
+                android:text="@{sleepTrakerViewModel.nightsString}" />
         </ScrollView>
 
         <!-- With data binding and LiveData, we can track the buttons' visibility states
@@ -72,7 +72,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin"
-            android:onClick="@{()->sleepTrcakerViewModel.onStartTracking()}"
+            android:enabled="@{sleepTrakerViewModel.startButtonVisible}"
+            android:onClick="@{()->sleepTrakerViewModel.onStartTracking()}"
             android:text="@string/start"
             app:layout_constraintBaseline_toBaselineOf="@id/stop_button"
             app:layout_constraintEnd_toStartOf="@+id/stop_button"
@@ -86,7 +87,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin"
             android:layout_marginEnd="@dimen/margin"
-            android:onClick="@{()->sleepTrcakerViewModel.onStopTracking()}"
+            android:enabled="@{sleepTrakerViewModel.stopButtonVisible}"
+            android:onClick="@{()->sleepTrakerViewModel.onStopTracking()}"
             android:text="@string/stop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/start_button"
@@ -100,7 +102,8 @@
             android:layout_marginStart="@dimen/margin"
             android:layout_marginEnd="@dimen/margin"
             android:layout_marginBottom="@dimen/margin"
-            android:onClick="@{()->sleepTrcakerViewModel.onClear()}"
+            android:enabled="@{sleepTrakerViewModel.clearButtonVisible}"
+            android:onClick="@{()->sleepTrakerViewModel.onClear()}"
             android:text="@string/clear"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
